Updated 14.Constraint (markdown)

--- a/14.Constraint.md
+++ b/14.Constraint.md
@@ -5,7 +5,7 @@ To enable the randomization we use rand() and randc() function.
 For using the constraint first, we need to assign the random variables by using the keyword rand or randc. After that declare the constraint statement.  
 
 All the constraint blocks are active at the same time.   
-****Syntax****  
+* **Syntax**    
 constraint  constraint_name{random_variable[range];}  
 
 **Note**-  If the variable is randomised without any constraints, then any value in the range will be assigned to the variable with equal probability. 
@@ -25,10 +25,10 @@ This system function is used to give the pseudorandom numbers.  These functions 
 |Return 32-bit unsigned random number but the number remains the same throughout the simulation unless we change the seed number. For the particular seed number again the random number is fixed and does not change throughout the simulation.  | Returns 32-bit signed random number and same as $urandom() not change the value throughout the simulation unless the seed number changed  .| Returns the unsigned value for the given specified range and not change value throughout the simulation time.  Syntax - $random(max,min);|
 
  
-**Example -**  
+* **Example -**  
  The below example shows the random function code.   
 
-**Code Snippet**  
+* **Code Snippet**  
   
      a = $random();  
      b = $urandom();  
@@ -52,7 +52,7 @@ This system function is used to give the pseudorandom numbers.  These functions 
      $display ("Random value of e = %0d", e);  
      end  
 
-**Output Snap**  
+* **Output Snap**  
 
 <img width="734" alt="cons_1" src="https://user-images.githubusercontent.com/110443268/190629477-ff70f07c-db95-4387-bdff-2b5ba7589cae.png">
 
@@ -76,12 +76,15 @@ _The drawback of random functions is, that they cannot change the value througho
 
 ### rand 
 rand is non-cyclic in nature. It will randomly give any value and can repeat the value before completing the cycle.  
+* **Syntax**  
+rand data_type variable_name;
+  
 
-**Example**  
+* **Example**  
 
 The below example is of rand variable.  
 
-**Code Snippet**  
+* **Code Snippet**  
 
      class rand_function;  
        rand logic [2:0] a ; // byte is 2 state signed data type  
@@ -99,7 +102,7 @@ The below example is of rand variable.
     end  
    
 
-**Output Snap**  
+* **Output Snap**  
 
 <img width="632" alt="cons_2" src="https://user-images.githubusercontent.com/110443268/190632351-751fcc5f-d868-4806-b9dc-0640bdde233e.png">
 
@@ -113,11 +116,14 @@ The below example is of rand variable.
 randc is random cyclic and cycles through all the values within their range before repeating any particular value.
 randc is cyclic in nature. It will give a random value and repeat it after completing the cycle.  
 
-**Example**     
+* **Syntax**  
+randc data_type variable_name;    
+
+* **Example**     
 
 The below example is for randc variable.  
   
-**Code Snippet**  
+* **Code Snippet**  
 
      class pack;  
        randc bit [2:0]a;  
@@ -136,7 +142,7 @@ The below example is for randc variable.
      end  
 
    
-**Output Snap**   
+* **Output Snap**   
 
  
 <img width="569" alt="cons_3" src="https://user-images.githubusercontent.com/110443268/190633546-3f5186af-d62a-4ab5-9e17-4ec6376bedc3.png">
@@ -152,12 +158,12 @@ The below example is for randc variable.
 ## Constraint Block 
 Constraint blocks are the class methods just like function and task. Constraints have unique name in the class.  
 
-**Syntax**  
+* **Syntax**  
   
 constraint [const_name] {expression 1; expression 2; ... expression N}  
   
 Instead of begin end block, constraint blocks are enclosed with curly braces.  
-**Conflict in constraint**   
+* **Conflict in constraint**    
 Conflict in constraint blocks are arise when -  
 1. We declare more than one constraint with the same name.
 2. If there is non-matching in the given ranges of constraint.  
@@ -170,11 +176,11 @@ We can declare constraints inside and outside of the class. For declaring the co
 
 If we declare constraint without using the extern keyword, then it will display a warning while compiling.  
   
-**Example**  
+* **Example**  
 
 The below example will show the constraint declaration with the use of the extern keyword.  
 
-**Code Snippet**  
+* **Code Snippet**  
 
     class class_a;  
      rand byte a;  
@@ -194,7 +200,7 @@ The below example will show the constraint declaration with the use of the exter
       end  
       end  
 
-**Output Snap**  
+* **Output Snap**  
 
 <img width="554" alt="cons_4" src="https://user-images.githubusercontent.com/110443268/190843316-09b3ad9c-88fd-445c-916a-5b7c74d4e074.png">
 
@@ -213,12 +219,12 @@ Randomization can also be done in array data types like static array, dynamic ar
 ### Static array randomization 
   
 In a static array, randomization is possible only for the array elements. As the size is fixed, it is not possible to change it.  
-Declare the array as the keyword rand or randc and on randomization, the elements of the array will get random values.
+Declare the array as the keyword rand or randc; on randomization, the elements of the array will get random values.
 
-**Example**-  
+* **Example -1**  
 The below example show the randomization of the one-dimensional static array.  
 
-**Code Snippet**   
+* **Code Snippet**   
 
      class static_array;  
       randc byte  a[5];  
@@ -242,7 +248,7 @@ The below example show the randomization of the one-dimensional static array.
 
   
 
-**Output Snap**   
+* **Output Snap**   
 
 <img width="671" alt="cons_5" src="https://user-images.githubusercontent.com/110443268/190843990-17077350-b02a-4c75-8299-4580f5681380.png">
 
@@ -252,10 +258,10 @@ The below example show the randomization of the one-dimensional static array.
 
 **GitHub lab output link**  
 
-**Example -2**-  
-The below example shows the randomization of a two-dimensional static array.  
+* **Example -2**-  
+The below example shows the randomization of a two-dimensional static array without using constraint. 
 
-**Code Snippet**  
+* **Code Snippet**  
 
     class class_1;  
      rand bit [3:0]a[2][4];  
@@ -272,7 +278,7 @@ The below example shows the randomization of a two-dimensional static array.
     end   
 
 
-**Output Snap**  
+* **Output Snap**  
 
 <img width="872" alt="cons_8" src="https://user-images.githubusercontent.com/110443268/190866664-ad77e697-fed4-476d-b0e8-033171262c8c.png">
 
@@ -281,7 +287,45 @@ The below example shows the randomization of a two-dimensional static array.
 
 **GitHub Lab Output Link**  
   
+* **Example -3**  
+The below example show the randomization of the multidimensional static array using the constraint.  
 
+* **Code Snippet**-  
+
+    class class_1;
+      rand bit [4:0]a[2:0][3:0];
+      constraint b{foreach (a[i,j])    // standard way to represent multidimensional array using
+                  a[i][j]<12;}           //foreach conditional statement
+    endclass
+    module mod;
+     class_1 pack;
+     initial begin
+       $display ("Randomization of multidimensional array");
+       $display ("----------------------------------------");
+       pack=new();
+       $display ("Before randomization");
+       $display (" Array = %0p",pack.a); // gives default value of data types .
+       $display ("-----------------------------------------------------------");
+       $display ("After randomization");
+       void'(pack.randomize());
+       for (int i =0;i<=5;i++)begin
+         void'(pack.randomize());
+         $display (" Iteration = %0d, Array = %0p",i,pack.a);
+         $display ("-----------------------------------------------------------");
+       end
+      end
+     
+* **Output Snap**  
+
+<img width="677" alt="cons_9" src="https://user-images.githubusercontent.com/110443268/191228931-aaff4b65-c227-461e-867e-1aedee1470c1.png">
+
+
+**GitHub Lab File Link**   
+
+**GitHub Lab Output Link**  
+
+
+ 
 
 ### Dynamic Array  
 A dynamic array has no predefined size during array declaration. Generally, the array_name.new() keyword is used to assign the size of the dynamic array.  
@@ -292,10 +336,10 @@ The below example will show how to randomize the dynamic array.
 
 The output after randomization is an empty array if the size is not constrained.  
 
-**Example**-    
+* **Example**    
   
 
-**Code Snippet**  
+* **Code Snippet**  
 
     class class_1;  
      randc bit [7:0] dyn_arr[];  
@@ -318,7 +362,7 @@ The output after randomization is an empty array if the size is not constrained.
      end  
 
 
-**Output Snap**  
+* **Output Snap**  
 
 <img width="654" alt="cons_7" src="https://user-images.githubusercontent.com/110443268/190845175-40912616-514a-42e2-942f-9bd099bc3b6b.png">
 
@@ -330,7 +374,7 @@ The output after randomization is an empty array if the size is not constrained.
 ### Queue  
 Queue size will get randomized based on size constraints, and queue elements will get random values.  
 The below example will show, how to randomize the elements of the queue.  
-**Output snap**  
+* **Output snap**  
 **lab link**  
 **output log file link**  
 
