--- a/13.Interface.md
+++ b/13.Interface.md
@@ -14,11 +14,11 @@ In Verilog, the communication between blocks is specified using module ports.
 
 sl. no. | **data type**         |
 |:--|:---------------------- |
-|1.|[Interface]() |
-|2.|[Parameterized interface]() |
-|3.|[Modports]() | 
-|4.|[Clocking blocks]() |
-|5.|[Virtual interface]()  |
+|1.|[Interface](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/13.Interface) |
+|2.|[Parameterized interface](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/13.Interface#parameterized-interface) |
+|3.|[Modports](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/13.Interface#modport) | 
+|4.|[Clocking blocks](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/13.Interface#clocking-block) |
+|5.|[Virtual interface](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/13.Interface#virtual-interface)  |
 
 
         Tabular column.1. Interface  
