Updated 14.Constraint (markdown)

--- a/14.Constraint.md
+++ b/14.Constraint.md
@@ -29,28 +29,28 @@ This system function is used to give the pseudorandom numbers.  These functions 
  The below example shows the random function code.   
 
 * **Code Snippet**  
-  
-     a = $random();  
-     b = $urandom();  
-     c= $urandom_range(4,2); //GIVING RANGE (MAX,MIN)  
-     d = $random(23); // assign some seed value  
-     e = $urandom(4); // assign seed value  
-     $display ("a=$random()      // Return 32 bit signed random variable");  
-     $display("Random Value of a  =  %0d",a);    
-     $display("b = $urandom()   // Return 32 bit unsigned random value .");    
-     $display("Random Value of b = %0d",b);  
-     $display ("c = $random_range(4,2)   // Return the unsigned random number") ;    
-     $display("                          by giving the range to the variable");  
-     $display("Random value of c = %0d",c);  
-     $display(" $random(seed);     // assign some seed value, it will display 32 bit ");  
-     $display ("                         signed random value for the given seed value ");  
-     $display ("d = $random(23);  // Seed value =23");  
-     $display ("Random value of d = %0d",d );  
-     $display ("$urandom(seed);  // assign the seed value , it will display 32 bit ");  
-     $display ("                    unsigned random value for the given seed value ");     
-     $display ("e = $urandom(4);  // Seed value = 4;");  
-     $display ("Random value of e = %0d", e);  
-     end  
+
+      a = $random();  
+      b = $urandom();  
+      c= $urandom_range(4,2); //GIVING RANGE (MAX,MIN)  
+      d = $random(23); // assign some seed value  
+      e = $urandom(4); // assign seed value  
+      $display ("a=$random()      // Return 32 bit signed random variable");  
+      $display("Random Value of a  =  %0d",a);    
+      $display("b = $urandom()   // Return 32 bit unsigned random value .");    
+      $display("Random Value of b = %0d",b);  
+      $display ("c = $random_range(4,2)   // Return the unsigned random number") ;    
+      $display("                          by giving the range to the variable");  
+      $display("Random value of c = %0d",c);  
+      $display(" $random(seed);     // assign some seed value, it will display 32 bit ");  
+      $display ("                         signed random value for the given seed value ");  
+      $display ("d = $random(23);  // Seed value =23");  
+      $display ("Random value of d = %0d",d );  
+      $display ("$urandom(seed);  // assign the seed value , it will display 32 bit ");  
+      $display ("                    unsigned random value for the given seed value ");     
+      $display ("e = $urandom(4);  // Seed value = 4;");  
+      $display ("Random value of e = %0d", e);  
+      end  
 
 * **Output Snap**  
 
@@ -86,20 +86,20 @@ The below example is of rand variable.
 
 * **Code Snippet**  
 
-     class rand_function;  
-       rand logic [2:0] a ; // byte is 2 state signed data type  
-    endclass  
-    rand_function raf;  
-      module rand_var;  
-      initial begin  
-      //  rand_function ra_f;  
-      raf = new();  
-     $display ("rand - Randomizing the value of the variable in non-cycling form  ");  
-     for (int i =0;i <= 10;i++)begin  
-     void'(raf.randomize ());  
-      $display("Iteration = %0d Random value of a = %0d",i, raf.a);  
-     end  
-    end  
+      class rand_function;  
+         rand logic [2:0] a ; // byte is 2 state signed data type  
+      endclass  
+      rand_function raf;  
+        module rand_var;  
+        initial begin  
+        //  rand_function ra_f;  
+        raf = new();  
+       $display ("rand - Randomizing the value of the variable in non-cycling form  ");  
+       for (int i =0;i <= 10;i++)begin  
+       void'(raf.randomize ());  
+        $display("Iteration = %0d Random value of a = %0d",i, raf.a);  
+       end  
+      end  
    
 
 * **Output Snap**  
@@ -125,21 +125,19 @@ The below example is for randc variable.
   
 * **Code Snippet**  
 
-     class pack;  
-       randc bit [2:0]a;  
-     endclass  
-     module randc_var;  
-     pack pk=new();  
-      initial begin  
-       $display (" randc - It  is cyclic in nature . It will repeat ");  
-
-       $display ("         it's value after completing one cycle .");  
-
-      for (int i =0; i<=12;i++)begin  
-      void'(pk.randomize ());  
-       $display("Iteration =  %0d    Random Value =  %0d ", i ,pk.a);  
-     end  
-     end  
+      class pack;  
+        randc bit [2:0]a;  
+      endclass  
+      module randc_var;  
+      pack pk=new();  
+       initial begin  
+        $display (" randc - It  is cyclic in nature . It will repeat ");  
+        $display ("         it's value after completing one cycle .");     
+       for (int i =0; i<=12;i++)begin  
+       void'(pk.randomize ());  
+        $display("Iteration =  %0d    Random Value =  %0d ", i ,pk.a);  
+      end  
+      end  
 
    
 * **Output Snap**   
@@ -182,21 +180,21 @@ The below example will show the constraint declaration with the use of the exter
 
 * **Code Snippet**  
 
-    class class_a;  
-     rand byte a;  
-     rand byte x;  
-     constraint b{a<6;  
-                  a>2;}  
-     extern constraint y;  
-     endclass  
-     constraint class_a:: y{x>7;}  
-     module mod;  
-     class_a pack;  
-     initial begin  
+      class class_a;  
+      rand byte a;  
+      rand byte x;  
+      constraint b{a<6;  
+                   a>2;}  
+      extern constraint y;  
+      endclass  
+      constraint class_a:: y{x>7;}  
+      module mod;  
+      class_a pack;  
+      initial begin  
       pack = new;  
       for (int i =0;i<=5;i++)begin  
-       void'(pack.randomize());  
-       $display ( "Iteration = %0d  Value of a = %0d Value of b = %0d  " , i,pack.a,pack.x);  
+      void'(pack.randomize());  
+      $display ( "Iteration = %0d  Value of a = %0d Value of b = %0d  " , i,pack.a,pack.x);  
       end  
       end  
 
@@ -224,26 +222,26 @@ Declare the array as the keyword rand or randc; on randomization, the elements o
 * **Example -1**  
 The below example show the randomization of the one-dimensional static array.  
 
-* **Code Snippet**   
+* **Code Snippet**      
 
-     class static_array;  
-      randc byte  a[5];  
-     endclass  
-     module stat_array;  
-     static_array stat_arr;  
-     initial begin  
-     stat_arr = new();  
-     $display ("Static array - Size is already declared. So, we can only randomize ");  
 
-     $display ("               the elements of it . ");  
-     $display ("rand byte a[5];  // Data type is byte");  
-     $display ("Before randomize the elements of array 'a'");  
-     $display ("Assign by the default value of array data type.");  
-     $display (" %0p", stat_arr.a);  
-     void '(stat_arr.randomize ());  
-     $display ("After randomize the elements of array 'a'");  
-     $display ("Output =  %0p ",stat_arr.a);   
-     end  
+       class static_array;  
+       randc byte  a[5];  
+       endclass  
+       module stat_array;  
+       static_array stat_arr;  
+       initial begin  
+       stat_arr = new();  
+       $display ("Static array - Size is already declared. So, we can only randomize ");  
+       $display ("               the elements of it . ");  
+       $display ("rand byte a[5];  // Data type is byte");  
+       $display ("Before randomize the elements of array 'a'");  
+       $display ("Assign by the default value of array data type.");  
+       $display (" %0p", stat_arr.a);  
+       void '(stat_arr.randomize ());  
+       $display ("After randomize the elements of array 'a'");  
+       $display ("Output =  %0p ",stat_arr.a);   
+       end  
      
 
   
@@ -263,19 +261,19 @@ The below example shows the randomization of a two-dimensional static array with
 
 * **Code Snippet**  
 
-    class class_1;  
-     rand bit [3:0]a[2][4];  
-    endclass  
-    module mod;  
-    class_1 pack;  
-    initial begin  
-     pack = new;  
-    $display ("The value elements of array before randomization = %0p",pack.a);  
-     for (int i =0;i<=5;i++)begin  
-     void'(pack.randomize());  
-    $display ("The value of elements of array after randomization = %0p",pack.a);  
-    end
-    end   
+      class class_1;  
+      rand bit [3:0]a[2][4];  
+      endclass  
+      module mod;  
+      class_1 pack;  
+      initial begin  
+      pack = new;  
+      $display ("The value elements of array before randomization = %0p",pack.a);  
+      for (int i =0;i<=5;i++)begin  
+      void'(pack.randomize());  
+      $display ("The value of elements of array after randomization = %0p",pack.a);  
+      end
+      end   
 
 
 * **Output Snap**  
@@ -292,28 +290,26 @@ The below example show the randomization of the multidimensional static array us
 
 * **Code Snippet**-  
 
-    class class_1;
-      rand bit [4:0]a[2:0][3:0];
-      constraint b{foreach (a[i,j])    // standard way to represent multidimensional array using
-                  a[i][j]<12;}           //foreach conditional statement
-    endclass
-    module mod;
-     class_1 pack;
-     initial begin
-       $display ("Randomization of multidimensional array");
-       $display ("----------------------------------------");
-       pack=new();
-       $display ("Before randomization");
-       $display (" Array = %0p",pack.a); // gives default value of data types .
-       $display ("-----------------------------------------------------------");
-       $display ("After randomization");
-       void'(pack.randomize());
-       for (int i =0;i<=5;i++)begin
-         void'(pack.randomize());
-         $display (" Iteration = %0d, Array = %0p",i,pack.a);
-         $display ("-----------------------------------------------------------");
-       end
-      end
+      class class_1;  
+      rand bit [4:0]a[2:0][3:0];  
+      constraint b{foreach (a[i,j])    // standard way to represent multidimensional array using  
+                     a[i][j]<12;}           //foreach conditional statement  
+       endclass  
+       module mod;  
+       class_1 pack;  
+       initial begin  
+         $display ("Randomization of multidimensional array");  
+         $display ("----------------------------------------");  
+        pack=new();  
+        $display ("Before randomization");  
+        $display (" Array = %0p",pack.a); // gives default value of data types .  
+        $display ("After randomization");  
+        void'(pack.randomize());  
+        for (int i =0;i<=5;i++)begin  
+        void'(pack.randomize());  
+        $display (" Iteration = %0d, Array = %0p",i,pack.a);   
+        end  
+        end  
      
 * **Output Snap**  
 
@@ -341,25 +337,23 @@ The output after randomization is an empty array if the size is not constrained.
 
 * **Code Snippet**  
 
-    class class_1;  
-     randc bit [7:0] dyn_arr[];  
-     // declaring a dynamic array, each element is of 7 bits.  
-     constraint dyn_arr_size{dyn_arr.size()>3;dyn_arr.size()<7;}  
-     // declare the size of the dyn_arr between 3 to  
-     //int i =4;  
-     constraint dyn_arr_ele{foreach (dyn_arr[i])   // each element value is square of the index number.  
-                            dyn_arr[i]==i*i;}  
-     endclass  
-     module mod;  
-     class_1 pack;  
-     initial begin  
-     pack = new();  
-     //$display ($size(pack.dyn_arr);  
-     void'(pack.randomize());  
-     for (int i = 0;i<pack.dyn_arr.size();i++)begin  
-     $display ("Iteration =%0p Value =%0p",i,pack.dyn_arr[i]);  
-     end  
-     end  
+      class class_1;  
+       randc bit [7:0] dyn_arr[];  
+       // declaring a dynamic array, each element is of 8 bits.  
+       constraint dyn_arr_size{dyn_arr.size()>3;dyn_arr.size()<7;}  
+       // declare the size of the dyn_arr between 3 to 7
+       constraint dyn_arr_ele{foreach (dyn_arr[i])   // each element value is square of the index number.  
+                             dyn_arr[i]==i*i;}  
+       endclass  
+       module mod;  
+       class_1 pack;  
+       initial begin  
+       pack = new();  
+       void'(pack.randomize());  
+       for (int i = 0;i<pack.dyn_arr.size();i++)begin  
+      $display ("Iteration =%0p Value =%0p",i,pack.dyn_arr[i]);  
+      end  
+      end  
 
 
 * **Output Snap**  
