Updated 14.Constraint (markdown)

--- a/14.Constraint.md
+++ b/14.Constraint.md
@@ -6,7 +6,7 @@ For using the constraint first, we need to assign the random variables by using 
 
 All the constraint blocks are active at the same time.   
 * **Syntax**    
-constraint  constraint_name{random_variable[range];}  
+`constraint  constraint_name{random_variable[range];}  `
 
 **Note**-  If the variable is randomised without any constraints, then any value in the range will be assigned to the variable with equal probability. 
 ***
@@ -22,7 +22,7 @@ constraint  constraint_name{random_variable[range];}
 This system function is used to give the pseudorandom numbers.  These functions are used inside the "initial begin" block. There are generally two system functions used and these are -
 |$urandom()|$random()|$urandom_range()|
 |:---------|:---------|:---------------|
-|Return 32-bit unsigned random number but the number remains the same throughout the simulation unless we change the seed number. For the particular seed number again the random number is fixed and does not change throughout the simulation.  | Returns 32-bit signed random number and same as $urandom() not change the value throughout the simulation unless the seed number changed  .| Returns the unsigned value for the given specified range and not change value throughout the simulation time.  Syntax - $random(max,min);|
+|Return 32-bit unsigned random number but the number remains the same throughout the simulation unless we change the seed number. For the particular seed number again the random number is fixed and does not change throughout the simulation. Syntax- $urandom()  | Returns 32-bit signed random number and same as $urandom() not change the value throughout the simulation unless the seed number changed. Syntax- $random()| Returns the unsigned value for the given specified range and does not change the value throughout the simulation time.  Syntax - $urandom(max,min);|
 
  
 * **Example -**  
@@ -53,6 +53,7 @@ This system function is used to give the pseudorandom numbers.  These functions 
       end  
 
 * **Output Snap**  
+The below output shows the $random(),$urandom() value and shows the effect of the seed value.    
 
 <img width="734" alt="cons_1" src="https://user-images.githubusercontent.com/110443268/190629477-ff70f07c-db95-4387-bdff-2b5ba7589cae.png">
 
@@ -77,7 +78,7 @@ _The drawback of random functions is, that they cannot change the value througho
 ### rand 
 rand is non-cyclic in nature. It will randomly give any value and can repeat the value before completing the cycle.  
 * **Syntax**  
-rand data_type variable_name;
+`rand data_type variable_name;`
   
 
 * **Example**  
@@ -103,6 +104,8 @@ The below example is of rand variable.
    
 
 * **Output Snap**  
+Here, the randomization of the variable is done using the rand and the output is iterated for 11 times using the for loop.  
+  
 
 <img width="632" alt="cons_2" src="https://user-images.githubusercontent.com/110443268/190632351-751fcc5f-d868-4806-b9dc-0640bdde233e.png">
 
@@ -117,7 +120,7 @@ randc is random cyclic and cycles through all the values within their range befo
 randc is cyclic in nature. It will give a random value and repeat it after completing the cycle.  
 
 * **Syntax**  
-randc data_type variable_name;    
+`randc data_type variable_name;    `
 
 * **Example**     
 
@@ -141,7 +144,7 @@ The below example is for randc variable.
 
    
 * **Output Snap**   
-
+Here, the variable is randomised using the randc which is cyclic in nature. The output is randomised 13 times using the for a loop. 
  
 <img width="569" alt="cons_3" src="https://user-images.githubusercontent.com/110443268/190633546-3f5186af-d62a-4ab5-9e17-4ec6376bedc3.png">
 
@@ -154,11 +157,11 @@ The below example is for randc variable.
 
 ***
 ## Constraint Block 
-Constraint blocks are the class methods just like function and task. Constraints have unique name in the class.  
+Constraint blocks are the class methods just like function and task. Constraints have a unique name in the class.  
 
 * **Syntax**  
   
-constraint [const_name] {expression 1; expression 2; ... expression N}  
+`constraint [const_name] {expression 1; expression 2; ... expression N}  `
   
 Instead of begin end block, constraint blocks are enclosed with curly braces.  
 * **Conflict in constraint**    
@@ -172,11 +175,19 @@ We can declare constraints inside and outside of the class. For declaring the co
 
 ![Untitled Diagram drawio (20)](https://user-images.githubusercontent.com/110443268/187884562-6e352c45-615b-4932-93d1-46d00eec0285.png)
 
+
 If we declare constraint without using the extern keyword, then it will display a warning while compiling.  
+  
+  * Declare constraints outside the class-  
+* **Syntax**  
+`class class_name;  `
+`extern constraint constraint_name;`
+`endclass`
+`constraint class_name ::constraint_name{condition;}`
   
 * **Example**  
 
-The below example will show the constraint declaration with the use of the extern keyword.  
+The below example will show the constraint declaration with the use of the extern keyword. Here, there are two constraints declared that is b and y. b is declared inside the class and y is declared outside the class using the extern keyword.
 
 * **Code Snippet**  
 
@@ -199,7 +210,7 @@ The below example will show the constraint declaration with the use of the exter
       end  
 
 * **Output Snap**  
-
+Here, the output shows the randomization of a variable using an extern constraint.
 <img width="554" alt="cons_4" src="https://user-images.githubusercontent.com/110443268/190843316-09b3ad9c-88fd-445c-916a-5b7c74d4e074.png">
 
 
@@ -247,6 +258,7 @@ The below example show the randomization of the one-dimensional static array.
   
 
 * **Output Snap**   
+Here, the output will show two outputs one is before randomization and the other is after randomization.  
 
 <img width="671" alt="cons_5" src="https://user-images.githubusercontent.com/110443268/190843990-17077350-b02a-4c75-8299-4580f5681380.png">
 
@@ -277,6 +289,7 @@ The below example shows the randomization of a two-dimensional static array with
 
 
 * **Output Snap**  
+Here, the output, shows the randomization of a two-dimensional array using rand and using for loop to randomised it 6 times.   
 
 <img width="872" alt="cons_8" src="https://user-images.githubusercontent.com/110443268/190866664-ad77e697-fed4-476d-b0e8-033171262c8c.png">
 
@@ -286,7 +299,7 @@ The below example shows the randomization of a two-dimensional static array with
 **GitHub Lab Output Link**  
   
 * **Example -3**  
-The below example show the randomization of the multidimensional static array using the constraint.  
+The below example show the randomization of the multidimensional static array using the constraint. Inside the constraint, foreach loop is used to give the condition to the variable. 
 
 * **Code Snippet**-  
 
@@ -312,6 +325,8 @@ The below example show the randomization of the multidimensional static array us
         end  
      
 * **Output Snap**  
+  
+Here, the array randomization is done 6 times. As we can see, all the element's value is less than 12.  
 
 <img width="677" alt="cons_9" src="https://user-images.githubusercontent.com/110443268/191228931-aaff4b65-c227-461e-867e-1aedee1470c1.png">
 
@@ -357,6 +372,7 @@ The output after randomization is an empty array if the size is not constrained.
 
 
 * **Output Snap**  
+Here, the size of the array is between 3 to 7 using constraint. The output will be displayed after randomization for (size of array +1) times 
 
 <img width="654" alt="cons_7" src="https://user-images.githubusercontent.com/110443268/190845175-40912616-514a-42e2-942f-9bd099bc3b6b.png">
 
