Updated 02.Array (markdown)

--- a/02.Array.md
+++ b/02.Array.md
@@ -369,10 +369,10 @@ Method | Example | Description
 function int size ();| queue1.size(); |  returns the number of items in the queue
 function void insert (input integer index, input element_t item); | queue1.insert(int 0, 2); | inserts the given item at the specified index position
 function void delete ( [input integer index] ); | queue1.delete(0); | deletes the item at the specified index position
-function element_t pop_front (); | queue1.push_front(); | inserts the given element at the front of the queue
-function element_t pop_back (); | queue1.push_back(); | inserts the given element at the end of the queue
-function void push_front (input element_t item); | queue1.pop_front("yelahanka") | removes and returns the first element of the queue
-function void push_back (input element_t item); | queue1.pop_back("udupi") | removes and returns the last element of the queue
+function element_t push_front (); | queue1.push_front(); | inserts the given element at the front of the queue
+function element_t push_back (); | queue1.push_back(); | inserts the given element at the end of the queue
+function void pop_front (input element_t item); | queue1.pop_front("yelahanka") | removes and returns the first element of the queue
+function void pop_back (input element_t item); | queue1.pop_back("udupi") | removes and returns the last element of the queue
   
                     Table.4 Queue Methods
 ---
